Fix jumping title

--- a/frontend/css/todos.css
+++ b/frontend/css/todos.css
@@ -59,7 +59,7 @@ h1{
     font-size: xx-large;
     text-align: center;
     background: radial-gradient(circle at 70% 30%, white, rgb(232, 248, 251));
-    padding: 4vh;
+    padding: 4.5vh;
     margin-bottom: 2vh;
     border-radius: 48%;
     box-shadow: 2px 4px 15px 0px rgb(235 235 229);
